src/objects/JBCXM__TransactionType__c.object
<CustomObject>
    <description>Utility object to store the allowed &quot;Transaction Line Items&quot; under any transaction. Common examples of the Transaction lines are &quot;Subscription Revenue&quot;, &quot;Services Revenue&quot;, &quot;User Count&quot; etc. Each transaction line can represent a recurring revenue or a one-time revenue or a user count or any other statistical drivers.</description>
    <fields>
        <fullName>JBCXM__FieldMapping__c</fullName>
        <label>FieldMapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsLinkedToLRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLinkedToLRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <description>Transaction type indicates whether the transaction represents Recurring Revenue or One-time Revenue or User Count or Statistical info.</description>
        <inlineHelpText>Transaction type indicates whether the transaction represents Recurring Revenue or One-time Revenue or User Count or Statistical info.</inlineHelpText>
        <label>Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Transaction Type</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__Type__c</columns>
        <columns>JBCXM__FieldMapping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>